--- a/css/style.css
+++ b/css/style.css
@@ -1,132 +1,139 @@
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lato';
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100;300;400;500;700;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap');
+ 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
 }
-
-.center{
-    max-width: 1100px;
-    padding: 0 2%;
-    margin: 0 auto;
-}
-
-.clear{
-    clear: both;
-}
-
-
-body{
-    background-color: rgb(245,245,245);
-}
-
-header{
-    background-color: white;
-    border-bottom: 1px solid #ccc   ;
-}
-
-header > .center{
+ 
+body {
+    background-image: url(../assets/imagens/BACK.jpg);
+    background-size: 100% 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-
-
-.img-perfil-wraper{
-    padding: 0 35px;
-}
-
-.img-perfil{
-    background-size: 100% 100%;
-    width: 55%;
-    padding-top: 55%;
-    border-radius: 50%;
-    border: 3px solid #ccc;
-    background-repeat: no-repeat;
-    padding: 80px;
-}
-
-.texto-perfil{
-    float: left;
-    width: 50%;
-}
-
-.nome-perfil span{
-    font-size: 23px;
-    font-weight: 300;
-}
-
-.nome-perfil a.btn{
-    text-decoration: none;
-    margin: 0 8px;
-    color: black;
-    border: 1px solid #dbdbdb;
-    padding: 4px 10px;
-}
-
-.nome-perfil a.icon{
-    text-decoration: none;
-    color: black;
-    font-size: 22px;
-}
-
-.info-perfil p {
-    display: inline-block;
-    margin-right: 8px;
-}
-
-.descricao-perfil h3{
-    font-size: 18px;
-}
-
-.descricao-perfil p{
-    font-weight: 300;
-    font-size: 16px;
-    margin-top: 6px;
-}
-
-section.feed{
-    padding: 20px 0;
-    text-align: center;
-}
-
-.line-marcacao{
-    display: none;
-    position: absolute;
-    width: 104px;
-    height: 3px;
-    background: black;
-    top: -10px;
-}
-
-.line-feed{
-    border-top: 1px solid #ccc;
-}
-
-.single-line-name{
-    text-transform: uppercase;
-    margin: 10px 10px;
-    font-size: 16px;
-    font-weight: 300;
-    cursor: pointer;
-    display: inline-block;
+ 
+.container {
+    background-color:  rgba(12, 10, 10, 0.6);
+    padding: 6px;
+    width: 350px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 7px 0 #3e3b3b;
+    }
+ 
+form {
+    position: absolute;
+    margin-top: 80px;
+    transition: .5s;
+    width: 300px;
+    height: 400px;
 }
-
-.publicacao-single{
-    float: left;
-    width: 33.3%;
-    padding-top: 33.3%;
-    border: 4px solid white;
-    background-size: 100% 100%;
+ 
+.btnForms {
+    margin-top: 40px;
+    position: relative;
+    border-radius: 30px;
+    box-shadow: 0 0 7px 0 rgb(10, 10, 10);
 }
-
-.perfil-descricao{
-    display: inline-flex;
-    margin-right: 50%;
+ 
+.btnForms button {
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    position: relative;
+    padding: 10px 29px;
+    color: #ffffff;
 }
-
-.img-perfil, h3, p{
-    display: inline-block;
+ 
+.btnColor {
+    position: absolute;
+    width: 108px;
+    height: 100%;
+    background: linear-gradient(to left, #ffffff, #000000);
+    border-radius: 30px;
+    transition: .3s;
 }
-
+ 
+input[type="text"], input[type="password"] {
+    border: none;
+    margin-top: 40px;
+    border-radius: 60px;
+    padding: 8px 0 8px 35px;
+    outline: none;
+    width: 100%;
+}
+ 
+button[type="submit"] {
+    background: rgb(27, 27, 27);
+    color: white;
+    border-radius: 30px;
+    width: 100%;  
+    border: none;
+    outline: none;
+    padding: 8px 0 8px 15px;
+    font-size: 15px;
+    margin-top: 40px;
+    cursor: pointer;
+}
+ 
+.todos:hover{
+    background: #3e3d3d;
+}
+.divCheck {
+    margin: 10px 0 0 5px;
+    width: 80%;
+    font-size: 13px;
+    color: #ffffff;
+}
+ 
+#entrar {
+    left: 25px;
+}
+ 
+#cadastrar {
+    left: 450px;
+}
+ 
+i {
+    position: absolute;
+    left: 0;
+    padding: 10px 10px;
+}
+ 
+.iEmail {
+    top: 40px;
+}
+ 
+.iPassword{
+    top: 114px;
+}
+ 
+.uSer {
+    top: 114px;
+}
+ 
+.iPassword2 {
+    top: 190px;
+}
+ 
+@media screen and (max-width: 390px) {
+    .container{
+        width: 300px;
+    }
+    #entrar,  #cadastrar{
+        margin-right: 30%;
+        max-width: 80%;
+       
+    }
+ 
+}
