--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -6,11 +6,11 @@
     font-family: 'Lato';
 }
 
-.center{
+/* .center{
     max-width: 1100px;
     padding: 0 2%;
     margin: 0 auto;
-}
+} */
 
 .clear{
     clear: both;
@@ -34,6 +34,7 @@ header > .center{
 
 .img-perfil-wraper{
     padding: 0 35px;
+    display: inline-block;
 }
 
 .img-perfil{
@@ -75,7 +76,8 @@ header > .center{
     margin-right: 8px;
 }
 
-.descricao-perfil h3{
+.descricao-perfil{
+    list-style-type: none;
     font-size: 18px;
 }
 
@@ -122,8 +124,8 @@ section.feed{
 }
 
 .perfil-descricao{
-    display: inline-flex;
-    margin-right: 50%;
+    display: flex;
+    background-color: #ccc;
 }
 
 .img-perfil, h3, p{
