--- a/css/access.css
+++ b/css/access.css
@@ -74,10 +74,6 @@ form {
     transition: .3s;
 }
 
-.btnCadastrar {
-    
-}
-
  
 input[type="text"], input[type="password"] {
     border: none;
@@ -166,6 +162,12 @@ i {
        
     }
  
+}
+
+@media screen and (max-width: 376px) {
+    .btnForms {
+        width: 80%;
+    }
 }
 
 .snow {
