add png de neve e tentando add ela na interface
tentando dar a animação do btn congelar quando clicar e por enquanto sem sucesso, alem dos icons que ainda estão bugando com o js

--- a/css/access.css
+++ b/css/access.css
@@ -74,6 +74,11 @@ form {
     transition: .3s;
 }
 
+.btnColor:focus {
+    background-image: url(../assets/imagens/congelamento_teste.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
  
 input[type="text"], input[type="password"] {
     border: none;
