--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -6,85 +6,30 @@
     font-family: 'Lato';
 }
 
-/* .center{
-    max-width: 1100px;
-    padding: 0 2%;
-    margin: 0 auto;
-} */
-
-.clear{
-    clear: both;
-}
-
-
 body{
     background-color: rgb(245,245,245);
 }
 
-header{
-    background-color: white;
-    border-bottom: 1px solid #ccc   ;
-}
-
-header > .center{
+.perfil-descricao{
     display: flex;
-}
-
-
-
-.img-perfil-wraper{
-    padding: 0 35px;
-    display: inline-block;
+    background-color: #ccc;
+    padding: 8px;
+    align-items: center;
 }
 
 .img-perfil{
-    background-size: 100% 100%;
-    width: 55%;
-    padding-top: 55%;
+    width: 150px;
+    height: auto;
     border-radius: 50%;
-    border: 3px solid #ccc;
-    background-repeat: no-repeat;
-    padding: 80px;
-}
-
-.texto-perfil{
-    float: left;
-    width: 50%;
-}
-
-.nome-perfil span{
-    font-size: 23px;
-    font-weight: 300;
-}
-
-.nome-perfil a.btn{
-    text-decoration: none;
-    margin: 0 8px;
-    color: black;
-    border: 1px solid #dbdbdb;
-    padding: 4px 10px;
-}
-
-.nome-perfil a.icon{
-    text-decoration: none;
-    color: black;
-    font-size: 22px;
-}
-
-.info-perfil p {
     display: inline-block;
-    margin-right: 8px;
+    margin-left: 5%;
 }
 
 .descricao-perfil{
     list-style-type: none;
-    font-size: 18px;
-}
-
-.descricao-perfil p{
-    font-weight: 300;
-    font-size: 16px;
-    margin-top: 6px;
+    line-height: 150%;
+    font-size: 17px;
+    padding-left: 40px;
 }
 
 section.feed{
@@ -115,20 +60,22 @@ section.feed{
     position: relative;
 }
 
-.publicacao-single{
-    float: left;
-    width: 33.3%;
-    padding-top: 33.3%;
-    border: 4px solid white;
-    background-size: 100% 100%;
+.center {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 5px;
+    padding: 5px;
 }
 
-.perfil-descricao{
-    display: flex;
+.card {
     background-color: #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
 }
 
-.img-perfil, h3, p{
-    display: inline-block;
+.publicacao-single {
+    width: 66.6%;
 }
-
