--- a/css/style.css
+++ b/css/style.css
@@ -74,19 +74,24 @@ section.feed{
     align-items: center;
     padding: 10px;
 }
+a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .publicacao-single {
     width: 66.6%;
 }
 
 
+
+
 /* popup */
 
-
-
-.center #blur.activate{
+#blur.activate{
     filter: blur(10px);
-    pointer-events: none;
+    pointer-events: none; 
     user-select: none;
 }
 
@@ -118,7 +123,7 @@ section.feed{
     font-size: 17px;
     padding-left: 40px;
 }
-#info #sair{
+#info a{
     color: #fff;
     text-decoration: none;
     text-align: right;
@@ -130,7 +135,7 @@ section.feed{
     opacity: 1;
     visibility: visible;
     transition: 1s;
-    height:450px ;
+    height: 430px ;
     display: flex;
     flex-direction: column;
     align-items: center;
