--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -1,81 +1,124 @@
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Lato';
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
 }
 
-body{
-    background-color: rgb(245,245,245);
+html {
+    font-size: 62.5%;
+}
+
+body {
+    background-image: url(../../assets/imagens/img-Home/imagem.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .perfil-descricao{
     display: flex;
-    background-color: #ccc;
-    padding: 8px;
+    background-color: #fff;
+    padding: .8rem;
+    padding-left: 3.2rem;
     align-items: center;
 }
 
+.alinhando {
+    text-align: center;
+    flex-direction: column;
+}
+
+.infos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 7rem;
+}
+
+span {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
 .img-perfil{
-    width: 150px;
+    width: 15em;
     height: auto;
     border-radius: 50%;
     display: inline-block;
-    margin-left: 5%;
 }
 
 .descricao-perfil{
     list-style-type: none;
-    line-height: 150%;
-    font-size: 17px;
-    padding-left: 40px;
+    font-size: 1.7em;
+    padding-left: 4em;
+    display: flex;
 }
 
 section.feed{
-    padding: 20px 0;
+    padding: 2em 0;
     text-align: center;
+    background-color: #f7f7f7;
 }
 
 .line-marcacao{
     display: none;
     position: absolute;
-    width: 104px;
-    height: 3px;
+    width: 10.4rem;
+    height: .3rem;
     background: black;
-    top: -10px;
+    top: -1rem;
 }
 
 .line-feed{
-    border-top: 1px solid #ccc;
+    border-top: .1rem solid #fff;
 }
 
 .single-line-name{
     text-transform: uppercase;
-    margin: 10px 10px;
-    font-size: 16px;
+    margin: 1rem 1rem;
+    font-size: 1.6rem;
     font-weight: 300;
     cursor: pointer;
     display: inline-block;
     position: relative;
 }
 
-.center {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 5px;
-    padding: 5px;
+.cards {
+    background-color: #f7f7f7;
 }
 
 .card {
-    background-color: #ccc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    background-color: #d3d3d3;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    justify-content: center;
+    border-radius: .5em;
+}
+
+.center {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: .5em;
+    padding: .5em;
 }
 
 .publicacao-single {
-    width: 66.6%;
+    width: 97%;
+    height: 97%;
+    border-radius: .5em;
+}
+
+@media screen and (min-width: 1280px) {
+    body {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+        height: 100vh;
+        max-width: 40vw;
+    }
 }
