--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -11,9 +11,18 @@ html {
 }
 
 body {
+    z-index: 1;
+}
+
+.imagem-fundo {
     background-image: url(../../assets/imagens/img-Home/imagem.png);
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 100vh;
+    z-index: -99999;
+    position: fixed;
+    filter: blur(1rem);
 }
 
 .perfil-descricao{
@@ -113,7 +122,7 @@ section.feed{
 }
 
 @media screen and (min-width: 1280px) {
-    body {
+    .limitar {
         position: absolute;
         transform: translate(-50%, -50%);
         top: 50%;
