--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -24,6 +24,8 @@ body {
 
 .imagemPerfil{
     width: 15em;
+    min-width: 10em;
+    min-height: auto;
     height: auto;
     display: inline-block;
 }
@@ -44,7 +46,6 @@ body {
 .descricao-perfil{
     list-style-type: none;
     font-size: 1.7em;
-    padding-left: 4em;
     display: flex;
 }
 
