--- a/css/stylePopup.css
+++ b/css/stylePopup.css
@@ -46,3 +46,9 @@
 .info p{
     text-align: center;
 }
+.botao{
+    width: 97%;
+    height: 97%;
+    margin-top: .3rem;
+    margin-left: .2rem;
+}
