--- a/css/css-home/style.css
+++ b/css/css-home/style.css
@@ -14,28 +14,25 @@ body {
     z-index: 1;
 }
 
-.imagem-fundo {
-    background-image: url(../../assets/imagens/img-Home/imagem.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    z-index: -99999;
-    position: fixed;
-    filter: blur(1rem);
-}
-
 .perfil-descricao{
-    display: flex;
     background-color: #fff;
-    padding: .8rem;
-    padding-left: 3.2rem;
-    align-items: center;
 }
 
-.alinhando {
-    text-align: center;
-    flex-direction: column;
+.alinhando{
+    display: flex;
+}
+
+.imagemPerfil{
+    width: 15em;
+    min-width: 10em;
+    min-height: auto;
+    height: auto;
+    display: inline-block;
+}
+
+.lista {
+    display: flex;
+    flex-direction: row;
 }
 
 .infos {
@@ -43,7 +40,24 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-left: 7rem;
+    flex-grow: 4;
+}
+
+.descricao-perfil{
+    list-style-type: none;
+    font-size: 1.7em;
+    display: flex;
+}
+
+.infos-coletados {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 2em;
+}
+
+.nome {
+    margin-top: 2em;
 }
 
 span {
@@ -52,17 +66,10 @@ span {
 }
 
 .img-perfil{
-    width: 15em;
-    height: auto;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
-    display: inline-block;
-}
-
-.descricao-perfil{
-    list-style-type: none;
-    font-size: 1.7em;
-    padding-left: 4em;
-    display: flex;
+    background-color: #d3d3d3;
 }
 
 section.feed{
@@ -129,5 +136,16 @@ section.feed{
         left: 50%;
         height: 100vh;
         max-width: 40vw;
+    }
+
+    .imagem-fundo {
+        background-image: url(../../assets/imagens/img-Home/imagem.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100vh;
+        z-index: -99999;
+        position: fixed;
+        filter: blur(1rem);
     }
 }
