--- a/css/parabens.css
+++ b/css/parabens.css
@@ -11,8 +11,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(rgb(143, 255, 255), rgb(18, 87, 87));
-    width: 100%;
+    background-image: linear-gradient(rgb(207, 243, 248), rgb(207, 243, 248));
+    /* background-image: linear-gradient(#ccc, #ccc); */
+    /* background-color: #ccc; */
+    width: 100vw;
     height: 100vh;
     background-color: #FFF;
     flex-direction: column;
@@ -23,17 +25,53 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgb(207, 243, 248);
+    background-color: #ffffff;
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
-    width: 15rem;
-    height: 15em;
+    width: 90%;
+    height: 55%;
     border-radius: .6rem;
     border: none;
     box-shadow: .1em .1em 5em #fff;
 }
 
 span {
-    color: #ffffff;
-    text-shadow: .2em .2em .3em #000;
+    color: #000;
+    /* text-shadow: .2em .2em .3em #000; */
+    
+}
+
+.foto_corvo {
+    width: 50%;
+    height: 50%;
+}
+
+.img_teste {
+    border-radius: .6rem;
+    width: 100%;
+    height: 100%;
+}
+
+h1 {
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+h5 {
+    text-align: center;
+}
+
+p {
+    font-size: 20px;
+    color: #000;
+    /* text-shadow: .2em .2em .3em #000; */
+    text-align: center;
+}
+
+.textinho {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
