--- a/css/parabens.css
+++ b/css/parabens.css
@@ -33,6 +33,7 @@
     border-radius: .6rem;
     border: none;
     box-shadow: .1em .1em 5em #fff;
+    
 }
 
 span {
@@ -50,9 +51,7 @@ span {
     border-radius: .6rem;
     width: 100%;
     height: 100%;
-    animation-name: corvo_aparecendo;
-    animation-duration: 2;
-    animation-timing-function: ease;
+    animation: corvo_aparecendo 3s infinite;
 }
 
 h1 {
@@ -62,6 +61,7 @@ h1 {
 
 h5 {
     text-align: center;
+    font-weight: 600;
 }
 
 p {
@@ -81,10 +81,10 @@ p {
 @keyframes corvo_aparecendo {
       
     0% {
-        display: none;
+        opacity: 0;
     }
 
     100% {
-        display: block;
+        opacity: 1;
     }
 }
