--- a/css/validar.css
+++ b/css/validar.css
@@ -10,6 +10,8 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
     width: 80vw;
     max-width: 35rem;
     height: 70vh;
@@ -42,11 +44,6 @@ img{
     100% {
         opacity: 0;
     }
-}
-
-
-h1, h2, h3{
-    text-align: center;
 }
 
 
