--- a/css/login.css
+++ b/css/login.css
@@ -110,6 +110,7 @@ form {
 
     & i {
         position: absolute;
+        top: 0;
         left: 0;
         height: 100%;
         width: 3rem;
@@ -141,7 +142,7 @@ form {
     padding: 1rem;
     border-radius: 1rem;
     font-size: medium;
-    color: white;
+    color: var(--white);
     opacity: 1;
     animation: fadeOut1 linear forwards 0.3s;
     animation-delay: 2s;
@@ -151,4 +152,101 @@ form {
 @keyframes fadeOut1 {
     from { opacity: 1; }
     to { opacity: 0; }
+}
+
+@media (max-width: 540px) {
+
+
+    .login {
+        width: 100%;
+        font-size: medium;
+        border: none;
+        background-color: transparent;
+        padding: 1rem;
+        color: var(--white);
+        cursor: pointer;
+
+    }
+
+    .signup {
+        width: 100%;
+        font-size: medium;
+        border: none;
+        background-color: transparent;
+        padding: 1rem;
+        color: var(--white);
+        cursor: pointer;
+    }
+
+    .slider {
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        left: 0rem;
+        background-color: var(--blue);
+        border-radius: 3rem;
+        transition: all 0.5s ease-in-out;
+        z-index: -1;
+    }
+
+    .moveslider {
+        left: 50%;
+    }
+
+    .form-section-move {
+        left: -100%;
+    }
+    
+    button {
+        font-size: medium;
+        padding: 1rem;
+        border: none;
+        border-radius: 5rem;
+        color: var(--white);
+        background-color: var(--blue);
+        cursor: pointer;
+    }
+
+    input {
+        width: 100%;
+        border: none;
+        border-radius: 5rem;
+        padding: 1rem 3rem;
+        font-size: medium;
+        outline: none;
+    }
+
+    input:focus+i {
+        color: var(--blue);
+    }
+
+    i {
+        position: absolute;
+        left: 1rem;
+        top: 1.1rem;
+        height: 100%;
+        width: 3rem;
+        font-size: medium;
+    }
+
+    i::before {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .divCheck {
+        margin: 1rem 0 0 1rem;
+        font-size: medium;
+        color: #ffffff;
+    }
+
+    span {
+        font-size: medium;
+    }
+
+    #rememberMe {
+        max-width: 4rem;
+    }
 }
