--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Skranji:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap');
+
 
 :root {
     --blue: dodgerBlue;
@@ -6,31 +8,37 @@
     --white: #fff;
 }
 
-
 html {
     font-size: 62.5%;
 }
 
 
 * {
-    /* margin: 0; */
-    /* padding: 0; */
+    margin: 0;
+    padding: 0; 
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    overflow: hidden;
+    /* font-family: "Poppins", sans-serif; */
+    font-family: "Skranji", system-ui;
+    
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
 }
 
-body {
+body{
+    background: linear-gradient(#a1bddd, #161b23);
+}
+
+.backgroundImage{
+    position: fixed;
+    top: 0;
     height: 100vh;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* flex-direction: column; */
+    width: 100vw;
     background-image: url(../assets/imagens/loginBackground.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
-    backdrop-filter: blur(3px);
+    filter: blur(3px);
+    z-index: -999;
 }
