--- a/css/intro.css
+++ b/css/intro.css
@@ -1,21 +1,20 @@
-body {
-    font-family: 'Roboto', sans-serif; 
-    background-color: #1a1a1a
-; 
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
 #conteudo {
     text-align: center;
     margin-bottom: 20px; 
 }
 
-button {
+#intro {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#botao {
     padding: 15px 30px;
     font-size: 18px;
     background-color: #1c355e; 
@@ -29,13 +28,9 @@ button {
     text-transform: uppercase; 
 }
 
-button:hover {
+#botao:hover {
     background-color: #6b0000; 
     border-color: #6b0000;
-}
-
-#audio {
-    display: none; 
 }
 
 #gifContainer {
@@ -43,7 +38,13 @@ button:hover {
 }
 
 #gif {
-    max-width: 100%;
-    max-height: 90vh; 
-    margin-top: 20px; 
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    width: 225px;
+    margin: auto;
+    opacity: 1;
 }
