--- a/css/login.css
+++ b/css/login.css
@@ -26,34 +26,36 @@ body{
     background: rgba(0, 0, 0, 0.2);
     z-index: 1;
     box-shadow: 0 0 3rem var(--white);
-    overflow: hidden;
-
-    & button {
-        width: 100%;
-        font-size: medium;
-        border: none;
-        background-color: transparent;
-        padding: 1rem;
-        color: var(--white);
-        cursor: pointer;
-    }
-
-    & .slider {
-        width: 50%;
-        height: 100%;
-        position: absolute;
-        left: 0rem;
-        background-color: var(--blue);
-        border-radius: 3rem;
-        transition: all 0.5s ease-in-out;
-        z-index: -1;
-    }
-
-    & .moveslider {
-        left: 50%;
-    }
+    overflow: hidden;   
 }
 
+.btn button {
+    width: 100%;
+    font-size: medium;
+    border: none;
+    background-color: transparent;
+    padding: 1rem;
+    color: var(--white);
+    cursor: pointer;
+}
+
+.btn .slider {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 0rem;
+    background-color: var(--blue);
+    border-radius: 3rem;
+    transition: all 0.5s ease-in-out;
+    z-index: -1;
+}
+
+.btn .moveslider {
+    left: 50%;
+}
+
+
+/* -------------------------------------------------------------------- */
 
 .form-section {
     width: 200%;
@@ -63,12 +65,15 @@ body{
     justify-content: space-between;
     transition: all 0.5s ease-in-out;
     left: 0rem;
-
-    &.form-section-move {
-        left: -100%;
-    }
+    
+    
 }
 
+.form-section-move {
+    left: -100%;
+}
+
+/* -------------------------------------------------------------------- */
 
 form {
     position: relative;
@@ -79,52 +84,59 @@ form {
     gap: 3rem;
     left: 0;
     transition: all 0.5s ease-in-out;
-
-    & button {
-        font-size: medium;
-        padding: 1rem;
-        border: none;
-        border-radius: 5rem;
-        color: var(--white);
-        background-color: var(--blue);
-        cursor: pointer;
-    }
+    
 }
 
+form button {
+    font-size: medium;
+    padding: 1rem;
+    border: none;
+    border-radius: 5rem;
+    color: var(--white);
+    background-color: var(--blue);
+    cursor: pointer;
+}
+
+/* -------------------------------------------------------------------- */
 
 .inputWithIcon {
     position: relative;
 
-    & input {
-        width: 100%;
-        border: none;
-        border-radius: 5rem;
-        padding: 1rem 3rem;
-        font-size: medium;
-        outline: none;
-
-        &:focus+i {
-            color: var(--blue);
-        }
-    }
-
-    & i {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 3rem;
-        font-size: medium;
-
-        &::before {
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    }
 }
 
+.inputWithIcon i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3rem;
+    font-size: medium;
+
+}
+
+.inputWithIcon i::before {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.inputWithIcon input {
+    width: 100%;
+    border: none;
+    border-radius: 5rem;
+    padding: 1rem 3rem;
+    font-size: medium;
+    outline: none;
+
+    
+}
+
+.imnputWithIcon input:focus+i {
+    color: var(--blue);
+}
+
+/* -------------------------------------------------------------------- */
 
 .divCheck {
     margin: 1rem 0 0 1rem;
@@ -132,6 +144,7 @@ form {
     color: #ffffff;
 }
 
+/* -------------------------------------------------------------------- */
 
 .alert{
     display: flex;
@@ -148,13 +161,14 @@ form {
     animation-delay: 2s;
 }
 
+/* -------------------------------------------------------------------- */
 
 @keyframes fadeOut1 {
     from { opacity: 1; }
     to { opacity: 0; }
 }
 
-@media (max-width: 540px) {
+/* @media (max-width: 540px) {
 
 
     .login {
@@ -249,4 +263,4 @@ form {
     #rememberMe {
         max-width: 4rem;
     }
-}
+} */
