Alterações Validar Corvo
Inserido a Fonte do GOW.
Alterado estilização de fonte default.
inserido campo com o nome no validar.php.
Modificado script para acessar o nome, e alterar imagem do corvo conforme captura.

--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Skranji:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&display=swap');
-
+@font-face {
+    font-family: "GodOfWar";
+    src: url(../assets/GODOFWAR.TTF);
+}
 
 :root {
     --blue: dodgerBlue;
@@ -17,17 +18,12 @@ html {
     margin: 0;
     padding: 0; 
     box-sizing: border-box;
-    /* font-family: "Poppins", sans-serif; */
-    font-family: "Skranji", system-ui;
+    font-family: "GodOfWar", sans-serif;
     
     user-select: none;
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
-}
-
-body{
-    background: linear-gradient(#a1bddd, #161b23);
 }
 
 .backgroundImage{
